--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "strict": true, /* Enable all strict type-checking options. */
     "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "skipLibCheck": true, /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+    "declaration": true,
+    "moduleResolution": "node",
+    "allowJs": true,
+    "resolveJsonModule": true
   },
   "include": [
     "./src/*",
